# rest-blog

./: .gitignore  db.sqlite3  pyproject.toml
blog/: admin.py  models.py  serializers.py  urls.py
blog/migrations/: 0001_initial.py
blog/tests/: model_test.py  view_test.py
blog/urls/: api_urls.py  view_set_urls.py
blog/utils/: permissions.py
blog/views/: api_views.py  views.py
config/: settings.py  urls.py
